--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="/Users/luciferm/Documents/workspace/Multi-Translate/lib/google-api-translate-java-0.92.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry exported="true" kind="lib" path="lib/google-api-translate-java-0.92.jar"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
